<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000011" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shake"
        android:textColor="#aaaaaa" />
    
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uranai"
        android:layout_alignLeft="@+id/text1"
        android:layout_marginTop="40dp"
        android:textColor="#aaaaaa" />
    
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenki"
        android:layout_alignLeft="@+id/text2"
        android:layout_below="@+id/text2"
        android:textColor="#aaaaaa" />
    
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relax"
        android:layout_alignLeft="@+id/text3"
        android:layout_below="@+id/text3"
        android:textColor="#aaaaaa" />
    
    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:layout_alignLeft="@+id/text4"
        android:layout_below="@+id/text4"
        android:textColor="#aaaaaa" />
    
    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oyasumi"
        android:layout_alignLeft="@+id/text5"
        android:layout_below="@+id/text5"
        android:textColor="#aaaaaa" />

</RelativeLayout>